<resources>
  <string name="app_name">GitHub Browser</string>
  <string name="title_activity_main">MainActivity</string>

  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>

  <string name="action_settings">Settings</string>
  <string name="nav_repositories">Repositories</string>
  <string name="nav_gists">Gists</string>
  <string name="nav_followers">Followers</string>
  <string name="nav_followings">Followings</string>
  <string name="hint_search_repositories">Search repositories\.\.\.</string>
  <string name="filter_results_msg_format">{C} results for repositories matching {K}</string>
  <string name="search_results_empty_msg_format">{L} doesn\'t have any repositories that match.</string>
  <string name="clear_filter">Clear filter</string>
  <string name="viewCode">View code</string>
  <string name="jumpToFile">Jump to file</string>
  <string name="starCountsFormat">Star {C}</string>
  <string name="watcherCountsFormat">Watcher {C}</string>
  <string name="forkCountsFormat">Fork {C}</string>
  <string name="createdAtFormat">Created at {D}</string>
  <string name="updatedAtFormat">Updated at {D}</string>
  <string name="pushedAtForamt">Pushed at {D}</string>
  <string name="files_count_format">{C} files</string>
  <string name="comments_count_format">{C} comments</string>
  <string name="gist_updated_date_format">Last active {D}</string>
  <string name="commented_format">commented {D}</string>
</resources>
