<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  tools:showIn="navigation_view">

  <group android:checkableBehavior="single">
    <item
      android:id="@+id/nav_repository"
      android:icon="@drawable/ic_repository"
      android:title="@string/nav_repositories" />
    <item
      android:id="@+id/nav_gists"
      android:icon="@drawable/ic_gists"
      android:title="@string/nav_gists" />
    <item
      android:id="@+id/nav_followers"
      android:icon="@drawable/ic_followers"
      android:title="@string/nav_followers" />
    <item
      android:id="@+id/nav_following"
      android:icon="@drawable/ic_following"
      android:title="@string/nav_followings" />
  </group>

</menu>
