<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="8dp"
  android:background="@android:color/white">

  <android.support.v7.widget.AppCompatEditText
    android:id="@+id/searchAcet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:padding="8dp"
    android:background="@drawable/shape_search_et"
    android:fontFamily="@font/roboto"
    android:hint="@string/hint_search_repositories"
    android:textColor="@android:color/black"
    android:textColorHint="#9E9E9E"
    android:inputType="text"
    android:imeOptions="actionDone"
    android:textSize="12sp"/>

  <LinearLayout
    android:layout_below="@id/searchAcet"
    android:id="@+id/filterContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:orientation="horizontal"
    android:visibility="gone"
    tools:visibility="visible">

    <TextView
      android:id="@+id/filterResultTv"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:fontFamily="@font/roboto_light"
      android:textSize="12sp"
      tools:text="5 results for repositories matching xxx"/>

    <TextView
      android:id="@+id/clearFilterTv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:drawableStart="@drawable/ic_close"
      android:fontFamily="@font/roboto_light"
      android:gravity="center_vertical"
      android:text="@string/clear_filter"
      android:textSize="12sp"/>

  </LinearLayout>


  <View
    android:id="@+id/divider"
    android:layout_below="@id/filterContainer"
    android:layout_width="match_parent"
    android:layout_height="0.3dp"
    android:background="#EEEEEE"/>

  <RelativeLayout
    android:layout_below="@id/divider"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp">

    <android.support.v7.widget.RecyclerView
      android:id="@+id/repositoriesRv"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layoutManager="android.support.v7.widget.LinearLayoutManager"
      tools:listitem="@layout/item_repository"/>

    <TextView
      android:id="@+id/noSearchResultsTv"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="16dp"
      android:background="@drawable/shape_search_results_empty"
      android:fontFamily="@font/roboto_medium"
      android:gravity="center"
      android:textColor="@android:color/black"
      android:visibility="gone"
      tools:text="@string/search_results_empty_msg_format"/>

  </RelativeLayout>

  <ProgressBar
    android:id="@+id/progressBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="148dp"
    android:visibility="gone"
    tools:visibility="visible" />


</RelativeLayout>