<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@android:color/white">

  <android.support.v7.widget.CardView
    android:id="@+id/infoCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="8dp"
      android:orientation="vertical">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
          android:id="@+id/loginNameTv"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:fontFamily="@font/roboto_medium"
          android:textColor="@android:color/black"
          tools:text="massivcode"/>

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="4dp"
          android:layout_marginEnd="4dp"
          android:fontFamily="@font/roboto_medium"
          android:text="/"
          android:textColor="#BDBDBD"/>

        <TextView
          android:id="@+id/repositoryNameTv"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:fontFamily="@font/roboto_medium"
          android:textColor="@android:color/black"
          tools:text="SimpleAutoValidator"/>

      </LinearLayout>

      <View
        android:id="@+id/languageDivider"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="8dp"
        android:background="#9E9E9E"/>

      <TextView
        android:id="@+id/repositoryDescriptionTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_light"
        android:textColor="#757575"
        tools:text="description"/>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape_bar"
        android:orientation="vertical">

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:orientation="horizontal">

          <TextView
            android:id="@+id/starCountsTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="4dp"
            android:drawablePadding="4dp"
            android:drawableStart="@drawable/ic_star"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_thin"
            android:gravity="center"
            android:maxLines="1"
            android:textColor="@android:color/black"
            tools:text="@string/starCountsFormat"/>

          <View
            android:layout_width="0.3dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="#9E9E9E"/>

          <TextView
            android:id="@+id/watcherCountsTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="4dp"
            android:drawablePadding="4dp"
            android:drawableStart="@drawable/ic_watchers"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_thin"
            android:gravity="center"
            android:maxLines="1"
            android:textColor="@android:color/black"
            tools:text="@string/watcherCountsFormat"/>

          <View
            android:layout_width="0.3dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="#9E9E9E"/>


          <TextView
            android:id="@+id/forkCountsTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="4dp"
            android:drawablePadding="4dp"
            android:drawableStart="@drawable/ic_fork"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_thin"
            android:gravity="center"
            android:maxLines="1"
            android:textColor="@android:color/black"
            tools:text="@string/forkCountsFormat"/>


        </LinearLayout>

        <View
          android:layout_width="match_parent"
          android:layout_height="0.3dp"
          android:background="#9E9E9E"/>

        <TextView
          android:id="@+id/createdAtTv"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:padding="4dp"
          android:drawablePadding="4dp"
          android:drawableStart="@drawable/ic_date"
          android:fontFamily="@font/roboto_thin"
          android:gravity="center_vertical"
          android:textColor="@android:color/black"
          tools:text="@string/createdAtFormat"/>

        <View
          android:layout_width="match_parent"
          android:layout_height="0.3dp"
          android:background="#9E9E9E"/>

        <TextView
          android:id="@+id/updatedAtTv"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:padding="4dp"
          android:drawablePadding="4dp"
          android:drawableStart="@drawable/ic_date"
          android:fontFamily="@font/roboto_thin"
          android:gravity="center_vertical"
          android:textColor="@android:color/black"
          tools:text="@string/updatedAtFormat"/>

        <View
          android:layout_width="match_parent"
          android:layout_height="0.3dp"
          android:background="#9E9E9E"/>

        <TextView
          android:id="@+id/pushedAtTv"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:padding="4dp"
          android:drawablePadding="4dp"
          android:drawableStart="@drawable/ic_date"
          android:fontFamily="@font/roboto_thin"
          android:gravity="center_vertical"
          android:textColor="@android:color/black"
          tools:text="@string/pushedAtForamt"/>

      </LinearLayout>


      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:background="@drawable/shape_bar"
        android:orientation="horizontal">

        <TextView
          android:id="@+id/viewCodeTv"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:padding="4dp"
          android:drawablePadding="4dp"
          android:drawableStart="@drawable/ic_folder"
          android:fontFamily="@font/roboto_medium"
          android:gravity="center"
          android:text="@string/viewCode"
          android:textColor="@android:color/black"/>

      </LinearLayout>


    </LinearLayout>

  </android.support.v7.widget.CardView>


  <ScrollView
    android:id="@+id/readMeSv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="9dp"
    android:layout_below="@id/infoCardView"
    android:visibility="gone"
    tools:visibility="visible">

    <android.support.v7.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:cardUseCompatPadding="true">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical">

        <TextView
          android:id="@+id/readmeFileNameTv"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:drawablePadding="4dp"
          android:drawableStart="@drawable/ic_book"
          android:fontFamily="@font/roboto_medium"
          android:gravity="center_vertical"
          android:textColor="@android:color/black"
          tools:text="README.md"/>

        <View
          android:layout_width="match_parent"
          android:layout_height="0.3dp"
          android:layout_marginTop="8dp"
          android:layout_marginBottom="8dp"
          android:background="#9E9E9E"/>

        <com.mukesh.MarkdownView
          android:id="@+id/markdownView"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>

      </LinearLayout>

    </android.support.v7.widget.CardView>

  </ScrollView>


  <ProgressBar
    android:id="@+id/progressBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="156dp"
    android:visibility="gone"
    tools:visibility="visible"/>

</RelativeLayout>