<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical">

  <ImageView
    android:id="@+id/profileIv"
    android:layout_width="40dp"
    android:layout_height="40dp"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:src="@drawable/ic_followers"/>
  <TextView
    android:id="@+id/loginNameTv"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    app:layout_constraintStart_toEndOf="@+id/profileIv"
    app:layout_constraintTop_toTopOf="parent"
    tools:text="massivcoide"/>
  <TextView
    android:id="@+id/dividerTv"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:text=" / "
    app:layout_constraintStart_toEndOf="@+id/loginNameTv"
    app:layout_constraintTop_toTopOf="parent"/>
  <TextView
    android:id="@+id/firstFileNameTv"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    app:layout_constraintStart_toEndOf="@+id/dividerTv"
    app:layout_constraintTop_toTopOf="parent"
    tools:text="test"/>
  <TextView
    android:id="@+id/updatedAtTv"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginStart="8dp"
    android:fontFamily="@font/roboto_light"
    android:textSize="12sp"
    app:layout_constraintStart_toEndOf="@+id/profileIv"
    app:layout_constraintTop_toBottomOf="@+id/loginNameTv"
    tools:text="@string/gist_updated_date_format"/>
  <TextView
    android:id="@+id/descriptionTv"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginStart="8dp"
    android:fontFamily="@font/roboto_light"
    android:textSize="12sp"
    app:layout_constraintStart_toEndOf="@+id/profileIv"
    app:layout_constraintTop_toBottomOf="@+id/updatedAtTv"
    tools:text="description"/>
  <TextView
    android:id="@+id/fileCountsTv"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:drawableStart="@drawable/ic_file"
    android:gravity="center_vertical"
    tools:text="@string/files_count_format"
    android:fontFamily="@font/roboto_light"
    android:textSize="12sp"
    android:textColor="@android:color/black"
    app:layout_constraintEnd_toStartOf="@+id/commentCountsTv"
    app:layout_constraintTop_toBottomOf="@+id/descriptionTv"/>
  <TextView
    android:id="@+id/commentCountsTv"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:drawableStart="@drawable/ic_comment"
    android:gravity="center_vertical"
    tools:text="@string/comments_count_format"
    android:fontFamily="@font/roboto_light"
    android:textSize="12sp"
    android:textColor="@android:color/black"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/descriptionTv"/>

</android.support.constraint.ConstraintLayout>